--- a/app/src/main/res/drawable/ic_profile.xml
+++ b/app/src/main/res/drawable/ic_profile.xml
@@ -7,9 +7,9 @@
     <path
             android:pathData="M4.782,5.914A4.282,4.282 0,0 1,9.065 10.196C9.065,12.562 0.5,12.562 0.5,10.196A4.282,4.282 0,0 1,4.782 5.914"
             android:strokeWidth="0.75"
-            android:strokeColor="@android:color/black" />
+            android:strokeColor="#000000" />
     <path
             android:pathData="M2.836,2.447a1.947,1.947 0,1 0,3.894 0a1.947,1.947 0,1 0,-3.894 0"
             android:strokeWidth="0.75"
-            android:strokeColor="@android:color/black" />
+            android:strokeColor="#000000" />
 </vector>
