--- a/app/src/main/res/layout/pot_item.xml
+++ b/app/src/main/res/layout/pot_item.xml
@@ -61,7 +61,7 @@
                 android:gravity="center_vertical"
                 android:text="XX Recoltés"
                 android:textAppearance="@style/TextAppearance.MyTheme.Subtitle1"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorSecondary"
                 android:textSize="18sp" />
 
             <TextView
